--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd-mobile": "^5.36.1",
     "classnames": "^2.5.1",
     "less": "^4.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
