--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gulp": "4.0.2",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
