--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "gulp",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -15,6 +15,7 @@
   "dependencies": {
     "antd-mobile": "^5.36.1",
     "classnames": "^2.5.1",
+    "del": "6.1.1",
     "less": "^4.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -34,6 +35,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "gulp": "4.0.2",
+    "gulp-babel": "8.0.0",
+    "gulp-typescript": "6.0.0-alpha.1",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
