--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "fronted",
-  "private": true,
-  "version": "0.0.0",
+  "name": "ly-mobile",
+  "private": false,
+  "version": "0.0.2",
   "type": "module",
+  "module": "./es/index.js",
   "scripts": {
     "dev": "vite",
     "build": "gulp",
+    "start": "dumi dev",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "pub": "npm publish ./lib",
     "preview": "vite preview"
   },
+  "files": [
+    "./lib"
+  ],
   "dependencies": {
     "antd-mobile": "^5.36.1",
+    "autoprefixer": "9.8.8",
     "classnames": "^2.5.1",
     "del": "6.1.1",
+    "gulp-less": "5.0.0",
+    "gulp-postcss": "9.0.1",
     "less": "^4.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -28,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "dumi": "1.1.48",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -37,7 +47,9 @@
     "gulp": "4.0.2",
     "gulp-babel": "8.0.0",
     "gulp-typescript": "6.0.0-alpha.1",
+    "postcss": "8.0.9",
     "prettier": "^3.2.5",
+    "through2": "4.0.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   },
